# CNtity

./: .clang-format  .gitignore  CMakeLists.txt  README.md  benchmark.cpp  license.md
examples/benchmark/: main.cpp
examples/getting-started/: main.cpp
examples/serialization/: main.cpp
include/CNtity/: Component.hpp  ComponentSet.hpp  Entity.hpp  EntitySet.hpp  Helper.hpp  Pool.hpp  SparseSet.hpp  View.hpp
include/CNtity/stduuid/: uuid.h
include/CNtity/stduuid/gsl/: gsl_util  span
tests/: Entity.test.cpp  Helper.test.cpp  View.test.cpp
tests/include/: Components.hpp
